# literature-digest

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
config/: areas.yaml  organisation_context.md
data/: state.db
data/fixtures/data_science/: game_model.json  spatiotemporal.json  style_of_play.json  tracking_data.json
data/fixtures/sports-nutrition/: sample.json
data/reports/: index.html
data/reports/areas/: data_science.html  recovery-and-sleep.html  sports-nutrition.html
data/search_terms/data_science/: game_model.txt  spatiotemporal.txt  style_of_play.txt  (+1 more)
docs/: To-do.md  pipeline.md  pipeline_internals.md
docs/issues/: 001-openalex-crossref-429-rate-limiting.md
docs/subtasks/: 01-search-term-loader-and-areas.md  02-scopus-subset-parser.md  03-query-translation-and-dates.md  04-scopus-api-source.md  05-matched-terms-and-report-grouping.md  06-model-tiering-and-test-db.md  07-screenings-persistence.md  08-determinism-eval-and-borderline.md  09-robustness-cleanup-docs.md  10-containerisation.md  11-local-offline-source-mode.md  12-report-ui-overhaul.md  13-per-term-limit.md  14-dedup-report-filters.md  README.md
scripts/: generate_fixtures.py  launchd.plist.tmpl  render_preview.py
src/literature_digest/: cli.py  config.py  models.py  pipeline.py  report.py  screen.py  store.py  summarize.py
templates/: area.html.j2  index.html.j2
tests/: test_config_loader.py  test_dedupe.py  test_local_source.py  test_report.py  test_scopus_parser.py  test_scopus_source.py  test_skeleton.py  test_sources.py  test_translator.py
(+10 files in other folders)
