[project]
name = "literature-digest"
version = "0.1.0"
description = "Bi-weekly literature digest pipeline: Scopus alerts + open APIs, LLM-screened, HTML reports per research area."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Literature Digest Maintainers" }]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "imap-tools>=1.7",
    "litellm>=1.40",
    "python-dotenv>=1.0",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "vcrpy>=6.0",
    "ruff>=0.5",
]

[project.scripts]
literature-digest = "literature_digest.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/literature_digest"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
